descriptions and last api files

--- a/manual/ru/blender/Lighting-and-Rendering.html
+++ b/manual/ru/blender/Lighting-and-Rendering.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для Blender: Освещение и Рендеринг - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to configure environment lighting, lights and rendering properties in Verge3D for Blender."/>
+    <meta name="description" content="Как настроить освещение окружения, свет и свойства рендеринга в Verge3D для Blender."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
@@ -353,7 +353,7 @@
     </p>
 
     <p>
-      *Frustum Culling* — включает/выключает оптимизацию фруструм кулинга. Снимите этот флажок, если у вас есть какой-либо обтекаемый объект, который может выходить за пределы экранного пространства, чтобы предотвратить его обтекание.
+      *Frustum Culling* — включает/выключает оптимизацию фрустум кулинга. Снимите этот флажок, если у вас есть какой-либо обтекаемый объект, который может выходить за пределы экранного пространства, чтобы предотвратить его обтекание.
     </p>
 
     <p>
