--- a/manual/ru/blender/Morphing.html
+++ b/manual/ru/blender/Morphing.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для Blender: Ключи формы (также известные как морфинг) - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how to setup and use shape keys (aka morphing) in Verge3D for Blender."/>
+    <meta name="description" content="Узнайте, как настраивать и использовать ключи формы (морфинг) в Verge3D для Blender."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
