--- a/manual/ru/blender/Object-Constraints.html
+++ b/manual/ru/blender/Object-Constraints.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для Blender: Ограничения Объектов - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="This page contains the information about Blender's object constraints supported in Verge3D."/>
+    <meta name="description" content="Эта страница содержит информацию об ограничениях объектов Blender, поддерживаемых в Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
