--- a/manual/ru/blender/Shader-Nodes-Reference.html
+++ b/manual/ru/blender/Shader-Nodes-Reference.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для Blender: Примеры Шейдерных Нод - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Information about Blender shader editor's features supported in Verge3D."/>
+    <meta name="description" content="Информация о функциях редактора шейдеров Blender, поддерживаемых в Verge3D."/>
     <meta content="https://cdn.soft8soft.com/images/shader_nodes_reference_blender.jpg" property="og:image">
     <base href="../../../" />
     <script src="page.js"></script>
@@ -782,7 +782,7 @@
 
     </p>
     Чтобы узнать больше информации о ноде *Vector Curves*, ознакомьтесь с руководством Blender, пройдя по следующей 
-        <a href="https://docs.blender.org/manual/ru/latest/render/shader_nodes/vector/curves.html" target="_blank">link</a>.
+        <a href="https://docs.blender.org/manual/ru/latest/render/shader_nodes/vector/curves.html" target="_blank">ссылке</a>.
     </p>
 
 
