--- a/manual/ru/introduction/AR-VR-development.html
+++ b/manual/ru/introduction/AR-VR-development.html
@@ -3,7 +3,7 @@
   <head>
     <title>AR/VR Разработка - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how you can enable Augmented Reality (AR) and Virtual Reality (VR) experience for your Verge3D applications."/>
+    <meta name="description" content="Узнайте, как можно включить дополненную реальность (AR) и виртуальную реальность (VR) в приложения Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
