--- a/manual/ru/introduction/Asset-compression.html
+++ b/manual/ru/introduction/Asset-compression.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D Сжатие Ассетов - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Verge3D supports loading assets compressed using the XZ/LZMA compression. Find out how to enable this feature on this page."/>
+    <meta name="description" content="Verge3D поддерживает загрузку ассетов, сжатых с помощью компрессии XZ/LZMA. Узнайте, как включить эту функцию на этой странице."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
