--- a/manual/ru/introduction/Creating-Mobile-Apps.html
+++ b/manual/ru/introduction/Creating-Mobile-Apps.html
@@ -3,7 +3,7 @@
   <head>
     <title>Создание мобильных приложений с помощью Apache Cordova - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how to use Apache Cordova to create cross-platform Verge3D applications for mobile."/>
+    <meta name="description" content="Узнайте, как использовать Apache Cordova для создания кросс-платформенных приложений Verge3D для мобильных устройств."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
