--- a/manual/ru/introduction/FAQ.html
+++ b/manual/ru/introduction/FAQ.html
@@ -335,7 +335,7 @@
       Если мы увеличим высоту окна на определенный процент, тогда нам нужна видимая высота на всех расстояниях, которая увеличится на такой же процент.
 
       Этого нельзя сделать, изменив положение камеры. Вместо этого вам нужно изменить  field-of-view для камеры.
-      [link:http://jsfiddle.net/Q4Jpu/ Example].
+      [link:http://jsfiddle.net/Q4Jpu/ Пример].
     </p>
 
 
