--- a/manual/ru/introduction/Facebook-3D-Posts.html
+++ b/manual/ru/introduction/Facebook-3D-Posts.html
@@ -3,7 +3,7 @@
   <head>
     <title>3D-посты Facebook с Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Here you will find the workflow and best practices for creating 3D Posts on Facebook using 3ds Max and Blender."/>
+    <meta name="description" content="Здесь вы найдете описание рабочего процесса и лучшие практики создания 3D-постов на Facebook с помощью 3ds Max и Blender."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
