--- a/manual/ru/introduction/HTML-based-user-interfaces.html
+++ b/manual/ru/introduction/HTML-based-user-interfaces.html
@@ -3,7 +3,7 @@
   <head>
     <title>Создание пользовательских интерфейсов на основе HTML для 3D веб-приложений - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how you can extend your Verge3D applications with HTML and CSS."/>
+    <meta name="description" content="Узнайте, как можно расширить приложения Verge3D с помощью HTML и CSS."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
