--- a/manual/ru/introduction/Hardware-Related-Issues.html
+++ b/manual/ru/introduction/Hardware-Related-Issues.html
@@ -3,7 +3,7 @@
   <head>
     <title>Неполадки, связанные с аппаратным обеспечением - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how to deal with hardware-related problems and restrictions."/>
+    <meta name="description" content="Узнайте, как справиться с проблемами и ограничениями, связанными с оборудованием."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
