--- a/manual/ru/introduction/Optimizing-WebGL-performance.html
+++ b/manual/ru/introduction/Optimizing-WebGL-performance.html
@@ -3,7 +3,7 @@
   <head>
     <title>Оптимизация сцен для повышения производительности WebGL - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Here we recommend some optimization techniques that proved to work well for creating WebGL-based interactive experiences."/>
+    <meta name="description" content="Здесь мы рекомендуем некоторые методы оптимизации, которые хорошо зарекомендовали себя при создании интерактивного опыта на базе WebGL."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
