--- a/manual/ru/introduction/Performance-Bottlenecks.html
+++ b/manual/ru/introduction/Performance-Bottlenecks.html
@@ -3,7 +3,7 @@
   <head>
     <title>Определение тонкостей производительности в Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Find out how to spot and eliminate performance bottlenecks in your Verge3D-based applications."/>
+    <meta name="description" content="Узнайте, как обнаружить и устранить узкие места в производительности приложений на базе Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
