--- a/manual/ru/introduction/Personalizing-Verge3D-Apps.html
+++ b/manual/ru/introduction/Personalizing-Verge3D-Apps.html
@@ -3,7 +3,7 @@
   <head>
     <title>Персонализация приложений Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to customize styles of your Verge3D applications."/>
+    <meta name="description" content="Как настраивать стили приложений Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
