--- a/manual/ru/introduction/Physics-Guide.html
+++ b/manual/ru/introduction/Physics-Guide.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D Physics Guide - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to use Verge3D physics engine to simulate dynamics and collisions on your scene."/>
+    <meta name="description" content="Как использовать физический движок Verge3D для моделирования динамики и столкновений на вашей сцене."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
