--- a/manual/ru/introduction/Puzzles-Visual-Logic-Editor.html
+++ b/manual/ru/introduction/Puzzles-Visual-Logic-Editor.html
@@ -145,7 +145,7 @@
     <img src="files/puzzles-editor/controls-save.jpg" class="centered" style="max-width: 1000px">
 
     <p>
-      Функция сохранения требует, чтобы локальный сервер разработки был запущен. Сервер запускается автоматически с первым экземпляром Blender, 3ds Max или Maya, но если он по какой-то причине не работает, при попытке сохранить головоломки будет отображаться ошибка подключения:
+      Функция сохранения требует, чтобы локальный сервер разработки был запущен. Сервер запускается автоматически с первым экземпляром Blender, 3ds Max или Maya, но если он по какой-то причине не работает, при попытке сохранить пазлы будет отображаться ошибка подключения:
     </p>
 
     <img src="files/puzzles-editor/controls-save-error.jpg" class="centered" style="max-width: 961px">
@@ -251,7 +251,7 @@
     <h3>Disable / Enable</h3>
 
     <p>
-      Используйте этот параметр меню, чтобы исключить группу головоломок из выполнения.    </p>
+      Используйте этот параметр меню, чтобы исключить группу пазлов из выполнения.    </p>
 
     <img src="files/puzzles-editor/puzzles-editor-right-click-menu-disable-enable.gif" class="centered" style="max-width: 830px">
 
@@ -260,7 +260,7 @@
     <h3>Delete</h3>
 
     <p>
-      Удаляет группу головоломок. Как вариант, используйте клавишу * Del *.
+      Удаляет группу пазлов. Как вариант, используйте клавишу * Del *.
     </p>
 
     <img src="files/puzzles-editor/puzzles-editor-right-click-menu-delete.jpg" class="centered" style="max-width: 736px">
