--- a/manual/ru/introduction/Testing-Mobile-Browsers.html
+++ b/manual/ru/introduction/Testing-Mobile-Browsers.html
@@ -3,7 +3,7 @@
   <head>
     <title>Тестирование Приложений Verge3D в Мобильных Браузерах - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how you can testing your Verge3D applications on mobile browsers."/>
+    <meta name="description" content="Узнайте, как можно тестировать приложения Verge3D в мобильных браузерах."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
@@ -115,7 +115,7 @@
     <img src="files/testing-mobile-browsers/chrome-port-forwarding.jpg" class="centered" style="max-width: 911px">
 
     <p>
-      Страница <i>chrome://inspect</i> page должна отображаться зеленым индикатором переадресации портов рядом с устройством.
+      Страница <i>chrome://inspect</i> должна отображаться зеленым индикатором переадресации портов рядом с устройством.
     </p>
 
     <img src="files/testing-mobile-browsers/chrome-port-forwarding2.jpg" class="centered" style="max-width: 707px">
