--- a/manual/ru/introduction/Text-Rendering.html
+++ b/manual/ru/introduction/Text-Rendering.html
@@ -3,7 +3,7 @@
   <head>
     <title>Рендеринг текста в Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to create text objects in Verge3D."/>
+    <meta name="description" content="Как создавать текстовые объекты в Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
