--- a/manual/ru/introduction/Using-JavaScript.html
+++ b/manual/ru/introduction/Using-JavaScript.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Using JavaScript in Verge3D applications - Soft8Soft</title>
+    <title>Использование JavaScript в приложениях Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how you can extend functionality of your Verge3D applications with JavaScript code."/>
+    <meta name="description" content="Узнайте, как можно расширить функциональность приложений Verge3D с помощью кода JavaScript."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
