--- a/manual/ru/max/Animation.html
+++ b/manual/ru/max/Animation.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для 3ds Max: Анимация - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Find out how to create and control animation in Verge3D for 3ds Max. Whole-object, skeletal, blend shapes and procedural animation types explained."/>
+    <meta name="description" content="Узнайте, как создавать анимацию 3ds Max и управлять ею в Verge3D. Объяснение типов анимации: объектная, скелетная, blend shapes и процедурная анимация."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
