--- a/manual/ru/max/Beginners-Guide.html
+++ b/manual/ru/max/Beginners-Guide.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для 3ds Max: Руководство для начинающих - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Get started with Verge3D and learn how to create interactive 3D web experiences from scratch. This guide covers using the app manager, setting up 3ds Max for effective graphics authoring, using the Puzzles environment to create interactive WebGL content without coding and publishing it with Verge3D Network."/>
+    <meta name="description" content="Начните работу с Verge3D и узнайте, как создавать интерактивные 3D веб приложения с нуля. В этом руководстве рассказывается об использовании менеджера приложений, настройке 3ds Max для эффективного создания графики, использовании среды Puzzles для создания интерактивного WebGL-контента без кодирования и его публикации с помощью Verge3D Network."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
