--- a/manual/ru/max/Camera.html
+++ b/manual/ru/max/Camera.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для 3ds Max: Работа с Камерой - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Find out how to create and control 3ds Max cameras to be used with Verge3D."/>
+    <meta name="description" content="Узнайте, как создавать и управлять камерами 3ds Max для использования в Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
