--- a/manual/ru/max/Lighting-and-Rendering.html
+++ b/manual/ru/max/Lighting-and-Rendering.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для 3ds Max: Освещение и Рендеринг - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="This page contains the information about 3ds Max' Lighting and rendering settings supported in Verge3D."/>
+    <meta name="description" content="Эта страница содержит информацию о настройках освещения и рендеринга в 3ds Max, поддерживаемых в Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
@@ -190,7 +190,7 @@
 
     <p>*Render Order* — изменяет порядок рендеринга для конкретного объекта. Чем меньше индекс, тем раньше будет отрисован объект. В большинстве случаев это значение необходимо подстроить при использовании прозрачности Blend для устранения артефактов прозрачности.</p>
 
-    <p>*Frustum Culling* — включает/выключает оптимизацию фруструм кулинга. Снимите этот флажок, если у вас есть какой-либо обтекаемый объект, который может выходить за пределы экранного пространства, чтобы предотвратить его обтекание. 
+    <p>*Frustum Culling* — включает/выключает оптимизацию фрустум кулинга. Снимите этот флажок, если у вас есть какой-либо обтекаемый объект, который может выходить за пределы экранного пространства, чтобы предотвратить его обтекание. 
     </p>
 
 
