--- a/manual/ru/max/Materials-Maps-Reference.html
+++ b/manual/ru/max/Materials-Maps-Reference.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для 3ds Max: Материалы и Тектсурные Карты - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Information about 3ds Max material editor's features supported in Verge3D."/>
+    <meta name="description" content="Информация о возможностях редактора материалов 3ds Max, поддерживаемых в Verge3D."/>
     <meta content="https://cdn.soft8soft.com/images/materials_maps_max.jpg" property="og:image">
     <base href="../../../" />
     <script src="page.js"></script>
