--- a/manual/ru/max/Morphing.html
+++ b/manual/ru/max/Morphing.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для 3ds Max: Морфинг - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how to setup and use morphing in Verge3D for 3ds Max."/>
+    <meta name="description" content="Узнайте, как настроить и использовать морфинг в Verge3D для 3ds Max."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
@@ -42,7 +42,7 @@
     <h2>Управление с помощью Puzzles</h2>
 
     <p>
-      Для манипулирования объектами морфа в реальном времени есть две головоломки: <a href="manual/ru/puzzles/Objects.html#get_morph_factor">get morph factor</a> и <a href="manual/ru/puzzles/Objects.html#set_morph_factor">set morph factor</a>. Более подробную информацию смотрите в демонстрации "Параметрические модели".
+      Для манипулирования объектами морфа в реальном времени есть два пазла: <a href="manual/ru/puzzles/Objects.html#get_morph_factor">get morph factor</a> и <a href="manual/ru/puzzles/Objects.html#set_morph_factor">set morph factor</a>. Более подробную информацию смотрите в демонстрации "Параметрические модели".
     </p>
 
 
