--- a/manual/ru/maya/Animation.html
+++ b/manual/ru/maya/Animation.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D for Maya: Animation - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Find out how to create and control animation in Verge3D for Maya. Whole-object, skeletal, blend shapes and procedural animation types explained."/>
+    <meta name="description" content="Узнайте, как создавать анимацию и управлять ею в Verge3D для Maya. Объяснение типов анимации: объектная, скелетная, blend shapes и процедурная."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
