--- a/manual/ru/maya/Camera.html
+++ b/manual/ru/maya/Camera.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для Maya: Работа с Камерой - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Find out how to create and control Maya cameras to be used with Verge3D."/>
+    <meta name="description" content="Узнайте, как создавать и управлять камерами Maya для использования в Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
