--- a/manual/ru/maya/GLTF-Materials.html
+++ b/manual/ru/maya/GLTF-Materials.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для Maya: glTF Материалы (glTF 2.0-compliant PBR) - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to setup glTF-compliant PBR materials in Maya to be used with Verge3D."/>
+    <meta name="description" content="Как настроить glTF-совместимые PBR-материалы в Maya для использования в Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
