--- a/manual/ru/maya/Installation.html
+++ b/manual/ru/maya/Installation.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для Maya: Установка - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="This page describes the installation procedure for Maya version of Verge3D. Find you how to setup Verge3D for Maya on Windows, macOS and Linux."/>
+    <meta name="description" content="На этой странице описана процедура установки версии Verge3D для Maya. Вы узнаете, как установить Verge3D для Maya на Windows, macOS и Linux."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
