--- a/manual/ru/maya/Materials.html
+++ b/manual/ru/maya/Materials.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D for Maya: Materials, Textures, and Utility Nodes - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn what kinds of Maya materials, textures, and utility nodes are supported in Verge3D and how to configure them to create good-looking 3D web interactives."/>
+    <meta name="description" content="Узнайте, какие типы материалов, текстур и узлов утилиты Maya поддерживаются в Verge3D и как их настроить для создания красивых 3D веб-интерактивов."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
