--- a/manual/ru/programmers_guide/Animation-system.html
+++ b/manual/ru/programmers_guide/Animation-system.html
@@ -3,7 +3,7 @@
   <head>
     <title>Анимация Verge3D - Soft8Soft</title>
     <meta charset="utf-8" />
-    <meta name="description" content="How to animate your Verge3D scene using JavaScript."/>
+    <meta name="description" content="Как анимировать сцену Verge3D с помощью JavaScript."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
