--- a/manual/ru/programmers_guide/How-to-obtain-Verge3D-sources.html
+++ b/manual/ru/programmers_guide/How-to-obtain-Verge3D-sources.html
@@ -3,7 +3,7 @@
   <head>
     <title>Как получить исходники Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Find out how to obtain the complete source code of Verge3D."/>
+    <meta name="description" content="Узнайте, как получить полный исходный код Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
