--- a/manual/ru/puzzles/AR_VR.html
+++ b/manual/ru/puzzles/AR_VR.html
@@ -3,7 +3,7 @@
   <head>
     <title>AR/VR Пазлы - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to enable and use the augmented reality and virtual reality modes in Puzzles."/>
+    <meta name="description" content="Как включить и использовать режимы дополненной реальности и виртуальной реальности в Пазлах."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
