--- a/manual/ru/puzzles/Advanced.html
+++ b/manual/ru/puzzles/Advanced.html
@@ -3,7 +3,7 @@
   <head>
     <title>Продвинутые Пазлы - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to use puzzles to implement advanced features in your apps, such as networking, interation with JavaScript code, data conversion, state saving/restoring and more."/>
+    <meta name="description" content="Как использовать пазлы для реализации расширенных возможностей в ваших приложениях, таких как создание сетей, взаимодействие с кодом JavaScript, преобразование данных, сохранение/восстановление состояния и многое другое."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
