--- a/manual/ru/puzzles/Camera.html
+++ b/manual/ru/puzzles/Camera.html
@@ -3,7 +3,7 @@
   <head>
     <title>Пазлы Камеры и Света - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to control cameras and lights in Verge3D Puzzles."/>
+    <meta name="description" content="Как управлять камерами и светом в Verge3D Puzzles."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
