--- a/manual/ru/puzzles/Debug.html
+++ b/manual/ru/puzzles/Debug.html
@@ -3,7 +3,7 @@
   <head>
     <title>Пазлы Отладки - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="These puzzles may be used to retrieve and print values of variables, measure the performance, and retrieve the GPU information."/>
+    <meta name="description" content="Эти пазлы можно использовать для получения и вывода значений переменных, измерения производительности и получения информации о GPU."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
