--- a/manual/ru/puzzles/Dictionaries.html
+++ b/manual/ru/puzzles/Dictionaries.html
@@ -3,7 +3,7 @@
   <head>
     <title>Пазлы Словарей - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Use dictionary puzzles to effectively store, transfer and retrieve various data in Verge3D applications."/>
+    <meta name="description" content="Используйте пазлы-словари для эффективного хранения, передачи и извлечения различных данных в приложениях Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
@@ -13,7 +13,7 @@
     <h1>Словари</h1>
 
     <p>
-      Головоломки из этой категории позволяют эффективно хранить, передавать и извлекать различные данные. В частности, словарь полезен для хранения множества параметров и их массовой передачи из и в JavaScript и по сети.
+      Пазлы из этой категории позволяют эффективно хранить, передавать и извлекать различные данные. В частности, словарь полезен для хранения множества параметров и их массовой передачи из и в JavaScript и по сети.
     </p>
 
     <img src="files/puzzles/puzzles-dictionaries.jpg">
