--- a/manual/ru/puzzles/ECommerce.html
+++ b/manual/ru/puzzles/ECommerce.html
@@ -3,7 +3,7 @@
   <head>
     <title>Плагин E-Commerce - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Puzzles from this plugin are used for implementing WooCommerce product 3D views and configurators, as well as for creating standalone order/inquiry forms."/>
+    <meta name="description" content="Пазлы из этого плагина используются для реализации 3D-видов и конфигураторов товаров WooCommerce, а также для создания автономных форм заказа/вопроса."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
