--- a/manual/ru/puzzles/Events.html
+++ b/manual/ru/puzzles/Events.html
@@ -3,7 +3,7 @@
   <head>
     <title>Пазлы Событий - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Handling user events with Verge3D Puzzles."/>
+    <meta name="description" content="Обработка пользовательских событий с помощью пазлов Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
@@ -109,7 +109,7 @@
     <h3>when dragged</h3>
 
     <p>
-      Ожидает, пока пользователь не перетащит указанный 3D-объект (или любой объект в указанном списке или группе, или любой объект на сцене, если используется головоломка <a href="manual/ru/puzzles/Selectors.html#all_objects">all objects</a>) с помощью мыши или жеста касания - затем генерирует данные о движении для использования в пазле "drag move", "drag rotate" или "drag scale". Также фиксируются события начала и прекращения перетаскивания.
+      Ожидает, пока пользователь не перетащит указанный 3D-объект (или любой объект в указанном списке или группе, или любой объект на сцене, если используется пазл <a href="manual/ru/puzzles/Selectors.html#all_objects">all objects</a>) с помощью мыши или жеста касания - затем генерирует данные о движении для использования в пазле "drag move", "drag rotate" или "drag scale". Также фиксируются события начала и прекращения перетаскивания.
     </p>
 
     <img src="files/puzzles/puzzles-events-when-dragged-over.jpg">
