--- a/manual/ru/puzzles/HTML.html
+++ b/manual/ru/puzzles/HTML.html
@@ -3,7 +3,7 @@
   <head>
     <title>Пазлы HTML - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to use Verge3D Puzzles to manipulate HTML DOM elements."/>
+    <meta name="description" content="Как использовать пазлы Verge3D для манипулирования элементами HTML DOM."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
