--- a/manual/ru/puzzles/Library.html
+++ b/manual/ru/puzzles/Library.html
@@ -3,7 +3,7 @@
   <head>
     <title>Библиотеки Пазлов - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Using Verge3D Puzzles library, a persistent storage for groups of puzzles for re-use in multiple projects."/>
+    <meta name="description" content="Использование библиотеки Пазлов Verge3D, постоянного хранилища для групп пазлов для повторного использования в нескольких проектах."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
