--- a/manual/ru/puzzles/Lists.html
+++ b/manual/ru/puzzles/Lists.html
@@ -3,7 +3,7 @@
   <head>
     <title>Пазлы Списков - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="These puzzles provide means for various operations with lists in your scenario."/>
+    <meta name="description" content="Эти пазлы предоставляют средства для различных операций со списками в вашем сценарии."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
