--- a/manual/ru/puzzles/Logic.html
+++ b/manual/ru/puzzles/Logic.html
@@ -3,7 +3,7 @@
   <head>
     <title>Пазлы Логики - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Logic puzzles provide conditional expressions to perform different computations or actions depending on whether a condition is met."/>
+    <meta name="description" content="Логические пазлы предоставляют условные выражения для выполнения различных вычислений или действий в зависимости от того, выполняется ли условие."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
