--- a/manual/ru/puzzles/Loops.html
+++ b/manual/ru/puzzles/Loops.html
@@ -3,7 +3,7 @@
   <head>
     <title>Цикличные Пазлы - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="These puzzles provide means for specifying iterations in your Puzzles scenario."/>
+    <meta name="description" content="Эти пазлы предоставляют средства для указания итераций в сценарии Puzzles."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
