--- a/manual/ru/puzzles/Misc.html
+++ b/manual/ru/puzzles/Misc.html
@@ -3,7 +3,7 @@
   <head>
     <title>Прочие Пазлы - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to use misc puzzles to perform various operations in your 3D applications."/>
+    <meta name="description" content="Как использовать миск-пазлы для выполнения различных операций в ваших 3D-приложениях."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
