--- a/manual/ru/puzzles/Numbers.html
+++ b/manual/ru/puzzles/Numbers.html
@@ -3,7 +3,7 @@
   <head>
     <title>Числовые Пазлы - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="These puzzles provide means for various operations with numbers in your scenario."/>
+    <meta name="description" content="Эти пазлы предоставляют средства для выполнения различных операций с числами в вашем сценарии."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
