--- a/manual/ru/puzzles/Physics.html
+++ b/manual/ru/puzzles/Physics.html
@@ -3,7 +3,7 @@
   <head>
     <title>Физические Пазлы - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Using puzzles to simulate physics behavior."/>
+    <meta name="description" content="Использование пазлов для моделирования физического поведения."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
@@ -53,7 +53,7 @@
     <h3>create rigid body</h3>
 
     <p>
-      Создает физическое тело из указанного объекта типа  *dynamic*, *kinematic*, *static* или *ghost*. Присваивает форму столкновения и задает массу тела (действительно только для *dynamic* тел). Также работает для списка объектов, группы (или списка групп) или с головоломкой <a href="manual/ru/puzzles/Selectors.html#all_objects">all objects</a>.
+      Создает физическое тело из указанного объекта типа  *dynamic*, *kinematic*, *static* или *ghost*. Присваивает форму столкновения и задает массу тела (действительно только для *dynamic* тел). Также работает для списка объектов, группы (или списка групп) или с пазлом <a href="manual/ru/puzzles/Selectors.html#all_objects">all objects</a>.
     </p>
 
     <img src="files/puzzles/puzzles-physics-create-physics-body.jpg">
