--- a/manual/ru/puzzles/Postprocessing.html
+++ b/manual/ru/puzzles/Postprocessing.html
@@ -3,7 +3,7 @@
   <head>
     <title>Пазлы Постобработки - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to enable bloom, SSAO, DOF, grayscale, SSR and other post-processing effects with Verge3D Puzzles."/>
+    <meta name="description" content="Как включить bloom, SSAO, DOF, grayscale, SSR и другие эффекты постобработки в Verge3D Puzzles."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
