--- a/manual/ru/puzzles/Procedures.html
+++ b/manual/ru/puzzles/Procedures.html
@@ -3,7 +3,7 @@
   <head>
     <title>Процедурные Пазлы - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Procedure (aka function) is a named group of puzzles that performs a specific task. By organizing your puzzles in procedures you can make your scenarios more compact and maintainable."/>
+    <meta name="description" content="Процедура (она же функция) - это именованная группа пазлов, выполняющая определенную задачу. Организуя пазлы в процедуры, вы можете сделать свои сценарии более компактными и удобными для сопровождения."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
