--- a/manual/ru/puzzles/Selectors.html
+++ b/manual/ru/puzzles/Selectors.html
@@ -3,7 +3,7 @@
   <head>
     <title>Перечень Селекторов - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to use Verge3D Puzzles to select 3D objects, groups, animation clips and materials."/>
+    <meta name="description" content="Как использовать Verge3D Puzzles для выбора 3D-объектов, групп, анимационных клипов и материалов."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
