--- a/manual/ru/puzzles/Text.html
+++ b/manual/ru/puzzles/Text.html
@@ -3,7 +3,7 @@
   <head>
     <title>Пазлы Текста - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Text puzzles provide means for various operations with text in your Puzzles scenario."/>
+    <meta name="description" content="Текстовые пазлы предоставляют средства для различных операций с текстом в вашем сценарии Пазлов."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
