--- a/manual/ru/puzzles/Time.html
+++ b/manual/ru/puzzles/Time.html
@@ -3,7 +3,7 @@
   <head>
     <title>Пазлы Времени - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to use timing features of Verge3D Puzzles"/>
+    <meta name="description" content="Как использовать временные возможности Verge3D Puzzles"/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
