--- a/manual/ru/puzzles/Variables.html
+++ b/manual/ru/puzzles/Variables.html
@@ -3,7 +3,7 @@
   <head>
     <title>Пазлы Переменных - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to manage variables in a visual way using Verge3D Puzzles."/>
+    <meta name="description" content="Как управлять переменными в наглядной форме с помощью пазлов Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
