--- a/manual/ru/blender/Animation.html
+++ b/manual/ru/blender/Animation.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для Blender: Анимация - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="This page contains the information about Blender's animation types supported in Verge3D."/>
+    <meta name="description" content="Данная страница содержит информацию о типах анимации Blender поддерживаемых в Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
