--- a/manual/ru/blender/GLTF-Materials.html
+++ b/manual/ru/blender/GLTF-Materials.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для Blender: glTF материалы (PBR совместимый с glTF 2.0) - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to setup glTF-compliant PBR materials in Blender to be used with Verge3D."/>
+    <meta name="description" content="Как настроить glTF-совместимые PBR-материалы в Blender для использования в Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
