--- a/manual/ru/blender/Material-Library.html
+++ b/manual/ru/blender/Material-Library.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для Blender: Использование Библиотеки Материалов - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how to use the material library in Verge3D for Blender."/>
+    <meta name="description" content="Узнайте, как использовать библиотеку материалов в Verge3D для Blender."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
