--- a/manual/ru/blender/Material-System.html
+++ b/manual/ru/blender/Material-System.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для Blender: Обзор системы материалов - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn what kinds of Blender materials are supported in Verge3D."/>
+    <meta name="description" content="Узнайте, какие типы материалов Blender поддерживаются в Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
