--- a/manual/ru/blender/Shadows.html
+++ b/manual/ru/blender/Shadows.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для Blender: Тени - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how to setup beautiful shadows in Verge3D for Blender."/>
+    <meta name="description" content="Узнайте, как настроить красивые тени в Verge3D для Blender."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
