--- a/manual/ru/introduction/Creating-Desktop-Apps.html
+++ b/manual/ru/introduction/Creating-Desktop-Apps.html
@@ -3,7 +3,7 @@
   <head>
     <title>Создание компьютерных приложений с использованием Electron - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how to use Electron to create cross-platform Verge3D applications for desktop."/>
+    <meta name="description" content="Узнайте, как использовать Electron для создания кросс-платформенных приложений Verge3D для настольных компьютеров."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
