--- a/manual/ru/introduction/Wordpress-Plugin.html
+++ b/manual/ru/introduction/Wordpress-Plugin.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D WordPress plugin - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to setup and use the Verge3D WordPress plugin for the purposes of publishing and e-commerce."/>
+    <meta name="description" content="Как настроить и использовать плагин Verge3D WordPress для целей публикации и электронной коммерции."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
