--- a/manual/ru/max/Animation-Constraints.html
+++ b/manual/ru/max/Animation-Constraints.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для 3ds Max: Ограничения Анимации - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="This page contains the information about 3ds Max' animation constraints supported in Verge3D."/>
+    <meta name="description" content="Эта страница содержит информацию об ограничениях анимации в 3ds Max, поддерживаемых в Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
