--- a/manual/ru/max/Transparency.html
+++ b/manual/ru/max/Transparency.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для 3ds Max: Прозрачность - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn what kinds of transparency can be enabled for 3ds Max materials and used in Verge3D."/>
+    <meta name="description" content="Узнайте, какие виды прозрачности можно включить для материалов 3ds Max и использовать в Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
