--- a/manual/ru/max/Viewport-Render-Preview.html
+++ b/manual/ru/max/Viewport-Render-Preview.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для 3ds Max: Окно просмотра и Предпросмотр Рендера - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how to configure 3ds Max viewport to match Verge3D look and feel. Use Scanline/ART rendering and the ActiveShade feature to obtain a reference image."/>
+    <meta name="description" content="Узнайте, как настроить вьюпорт 3ds Max для соответствия внешнему виду Verge3D. Использование рендеринга Scanline/ART и функции ActiveShade для получения эталонного изображения."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
