--- a/manual/ru/maya/Blend-Shapes.html
+++ b/manual/ru/maya/Blend-Shapes.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для Maya: Blend Shapes (Морфинг) - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how to setup, configure and animate blend shapes (morphing) in Verge3D for Maya."/>
+    <meta name="description" content="Узнайте, как установить, настроить и анимировать формы наложения (морфинг) в Verge3D для Maya."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
