--- a/manual/ru/maya/Lighting-and-Rendering.html
+++ b/manual/ru/maya/Lighting-and-Rendering.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D для Maya: Освещение и рендеринг - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to configure environment lighting, lights and rendering settings in Verge3D for Maya."/>
+    <meta name="description" content="Как настроить освещение среды, свет и параметры рендеринга в Verge3D для Maya."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
@@ -308,7 +308,7 @@
     </p>
 
     <p>
-      *Frustum Culling* - включает/выключает оптимизацию фруструм кулинга. Снимите этот флажок, если у вас есть какой-либо обтекаемый объект, который может выходить за пределы экранного пространства, чтобы предотвратить его обтекание.
+      *Frustum Culling* - включает/выключает оптимизацию фрустум кулинга. Снимите этот флажок, если у вас есть какой-либо обтекаемый объект, который может выходить за пределы экранного пространства, чтобы предотвратить его обтекание.
     </p>
 
 
