--- a/manual/ru/maya/Transparency.html
+++ b/manual/ru/maya/Transparency.html
@@ -3,7 +3,7 @@
   <head>
     <title>Verge3D for Maya: Transparency - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn what kinds of transparency can be enabled for Maya materials and used in Verge3D."/>
+    <meta name="description" content="Узнайте, какие виды прозрачности можно включить для материалов Maya и использовать в Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
