--- a/manual/ru/programmers_guide/Developer-Kit.html
+++ b/manual/ru/programmers_guide/Developer-Kit.html
@@ -3,7 +3,7 @@
   <head>
     <title>Комплект Разработчика Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="Learn how to use Developer Kit to create your own modification of Verge3D toolkit."/>
+    <meta name="description" content="Узнайте, как использовать Developer Kit для создания собственной модификации набора инструментов Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
