--- a/manual/ru/puzzles/Animation.html
+++ b/manual/ru/puzzles/Animation.html
@@ -3,7 +3,7 @@
   <head>
     <title>Пазлы Анимации и Ограничения - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to control animation using Verge3D Puzzles."/>
+    <meta name="description" content="Как управлять анимацией с помощью пазлов Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
