--- a/manual/ru/puzzles/Initialization.html
+++ b/manual/ru/puzzles/Initialization.html
@@ -3,7 +3,7 @@
   <head>
     <title>Пазлы Инициализации - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to perform application initialization tasks with Verge3D Puzzles."/>
+    <meta name="description" content="Как выполнять задачи инициализации приложения с помощью Пазлов Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
