--- a/manual/ru/puzzles/Objects.html
+++ b/manual/ru/puzzles/Objects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="ru"><head>
     <title>Пазлы Объектов - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to manage your 3D objects with Verge3D Puzzles.">
+    <meta name="description" content="Как управлять 3D-объектами с помощью Пазлов Verge3D.">
     <base href="../../../">
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css">
