--- a/manual/ru/puzzles/Scenes.html
+++ b/manual/ru/puzzles/Scenes.html
@@ -3,7 +3,7 @@
   <head>
     <title>Пазлы сцены - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to perform various operations with your scenes and rendering with Verge3D Puzzles."/>
+    <meta name="description" content="Как выполнять различные операции со сценами и рендерингом с помощью пазлов Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
@@ -123,7 +123,7 @@
     <h3>create environment</h3>
 
     <p>
-      Создайте новое освещение на основе изображения и назначьте сцене фон. Эта головоломка также создает новый материал с именем, указанным в качестве первого параметра, и добавляет его в сцену. Вы можете использовать этот материал для замены текстур или цветов окружения.
+      Создайте новое освещение на основе изображения и назначьте сцене фон. Этот пазл также создает новый материал с именем, указанным в качестве первого параметра, и добавляет его в сцену. Вы можете использовать этот материал для замены текстур или цветов окружения.
     </p>
 
     <p>
