--- a/manual/ru/puzzles/Sound.html
+++ b/manual/ru/puzzles/Sound.html
@@ -3,7 +3,7 @@
   <head>
     <title>Аудио и Видео Пазлы - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to load, play and manage audio and video using Verge3D Puzzles."/>
+    <meta name="description" content="Как загружать, воспроизводить и управлять аудио и видео с помощью пазлов Verge3D."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
